# AIC25

./: .env.example  .gitignore  LICENSE  OPTIMIZATION_SUMMARY.md  PROJECT_RESTRUCTURE_PLAN.md  README.md  pyproject.toml
config/: default.yaml  development.yaml  production.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml  nginx.conf
docs/: CLI_USAGE.md  COMPONENT_EXTENSION_GUIDE.md  FRONTEND_OPTIMIZATIONS.md  PROJECT_WORKFLOW.md  README.md  distributed_deployment.md
docs/development/: setup.md
docs/user-guide/: installation.md
layout/: config.yaml
scripts/: build.py  demo_distributed.py  deploy_distributed.py  dev-setup.py  start_backend.py
src/config/: loader.py
src/entities/: __init__.py  search.py
src/entry/cli/: __main__.py
src/entry/cli/commands/: __init__.py  add.py  analyse.py  command.py  index.py  init.py  serve.py
src/entry/view/: package-lock.json  package.json
src/entry/web/: app.py  models.py  startup.py
src/entry/web/routers/: __init__.py  frames.py  registry.py  search.py  system.py  videos.py
src/entry/web/view/: package.json  tsconfig.json  vite.config.ts
src/services/: cache.py  discovery.py  load_balancer.py
src/services/analyse/features/: __init__.py  clip.py  enhanced_clip.py  feature_extractor.py  trorc.py
src/services/index/: __init__.py  database_factory.py  faiss.py  milvus.py
src/services/search/: __init__.py  base.py  faiss_searcher.py  milvus_searcher.py  search_factory.py  searcher.py
src/services/webui/backend/: app.py
src/utils/: __init__.py  common.py  keyframe.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: index.css  main.tsx
web/src/components/: Answer.tsx  AudioSearch.tsx  Frame.tsx  VirtualGrid.tsx
web/src/constants/: options.ts
web/src/hooks/: useCache.ts
web/src/pages/: Search.tsx
web/src/services/: search.ts  simple_discovery.ts
web/src/types/: index.ts
web/src/utils/: performance.ts
(+25 files in other folders)
