[build-system]
requires = ["setuptools>=80.9.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aic25"
version = "1.0.0"
requires-python = ">= 3.12"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
dependencies = [
  "rich~=13.9.4",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "numpy==2.2.6",
  "transformers==4.55.0",
  "python-dotenv==1.1.1",
  "pyyaml==6.0.2",
  "opencv-python==4.12.0.88",
  "pillow==11.3.0",
  "pymilvus==2.6.0",
  "fastapi~=0.116.1",
  "uvicorn~=0.35.0",
  "easyocr~=1.7.2",
  "thefuzz~=0.22.1",
]

[project.scripts]
aic25-cli = "aic25.cli:__main__.main"

[tool.setuptools]
packages = ["src"]


